# drf_p35

./: .gitignore  TODO  pyproject.toml
apps/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/fixtures/: categories.json
apps/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_user_balance.py  0003_product.py  0003_user_type.py  0004_order.py
apps/models/: __init__.py  base.py  products.py  shops.py  users.py
apps/utils/: logging_filters.py  threadlocals.py
root/: asgi.py  settings.py  urls.py  wsgi.py
